Fixed image galler size on mobile

--- a/frontend/src/pages/apartment/components/Gallery.module.scss
+++ b/frontend/src/pages/apartment/components/Gallery.module.scss
@@ -20,7 +20,7 @@
 
 @media (max-width: 768px) {
     .gallery {
-        padding: 4rem 2rem;
+        padding: 4rem 1rem;
 
         &__images {
             img {
